[package]
# TODO: Figure out public name before v0.1.0 release.
name = "contracts"
categories = ["no-std", "wasm"]
description = "Contracts for Stylus"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true
derive_more = "0.99.17"
cfg-if = "1.0"

[dev-dependencies]
grip = { path = "../lib/grip" }
rand = "0.8.5"
once_cell = "1.19.0"

brotli2 = "0.3.2"

tokio = { version = "1.12.0", features = ["full"] }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "0df7fb1" }
revm-primitives = { version = "3" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e", default-features = false }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e", default-features = false, features = [
  "hyper",
] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "5f74d4e" }
# alloy-primitives = { version = "0.7.0", features = ["getrandom"] }
alloy-dyn-abi = "0.7.0"
alloy-json-abi = "0.7.0"
alloy-sol-types = "0.7.0"
syn-solidity = "0.7.0"

# stylus = { path = "../../../../stuff/stylus/arbitrator/stylus" }
# cargo-stylus = { path = "../../../../stuff/cargo-stylus", default-features = false }

[features]
default = []

erc20 = []
erc20_metadata = ["erc20"]
erc20_burnable = ["erc20"]
erc721 = []

# Enables using the standard library. This is not included in the default
# features, because this crate is meant to be used in a `no_std` environment.
# Currently, the std feature is only used for testing purposes.
std = []

[lib]
crate-type = ["lib", "cdylib"]
